(library
 (name discovery_ocaml_interface)
 (modules discovery_code discovery_ocaml_interface)
 (libraries factori_types blockchain tzfunc ez_api.icurl_lwt lwt.unix))

(library
 (name consensus_ocaml_interface)
 (modules consensus_code consensus_ocaml_interface)
 (libraries factori_types blockchain tzfunc ez_api.icurl_lwt lwt.unix))
